# smart-waste-env

./: Dockerfile  README.md  api.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  waste_env.py
server/: app.py
src/: api.py  env.py  waste_env.py
